--- a/apax.yml
+++ b/apax.yml
@@ -16,11 +16,11 @@ scripts:
     - apax version $1
     - apax pack
 devDependencies:
-  "@ax/sdk": 1.0.136
+  "@ax/sdk": 1.0.138
   "@simatic-ax/snippetscollection": 0.0.6
 dependencies:
   "@ax/system-strings": 2.0.13
-  "@ax/system-math": ^1.0.32
+  "@ax/system-math": 1.0.32
 registries:
   '@simatic-ax': 'https://npm.pkg.github.com/'
 
