--- a/.github/workflows/test_wf.yml
+++ b/.github/workflows/test_wf.yml
@@ -1,17 +1,6 @@
 name: test-apax
 on:
-  workflow_call:
-    secrets:
-      APAX_TOKEN:
-        description: "Access token for installing apax sdk"
-        required: true
-      SIMATIC_AX_TOKEN:
-        description: "Access token for installing packages from github registry, required if LOGIN_SIMATIC_AX is true"
-        required: false
-    inputs:
-      LOGIN_SIMATIC_AX:
-        type: boolean
-        default: false
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
