--- a/.github/workflows/test_wf.yml
+++ b/.github/workflows/test_wf.yml
@@ -12,6 +12,6 @@ jobs:
           fetch-depth: 1
 
       - name: "Setup the apax runner"
-        uses: simatic-ax/actions/setup-apax-runner@stable
+        uses: simatic-ax/actions/setup-apax-runner@main
         with:
           APAX_TOKEN: ${{ secrets.APAX_TOKEN }}
