--- a/apax.yml
+++ b/apax.yml
@@ -14,14 +14,15 @@ variables:
   APAX_BUILD_ARGS:
     - '--debug'
 targets:
-  - 'axunit-llvm'
+  - '1500'
+  - 'llvm'
 # Dependencies
 devDependencies:
-  "@ax/sdk": 4.0.12
+  "@ax/sdk": 2311.0.1
   "@simatic-ax/snippetscollection": 0.1.3
 dependencies:
-  "@ax/system-strings": 5.0.60
-  "@ax/system-math": 5.0.60
+  "@ax/system-strings": 6.0.94
+  "@ax/system-math": 6.0.94
 # Registry information, where the package will be published
 registries:
   '@simatic-ax': 'https://npm.pkg.github.com/'
