--- a/apax.yml
+++ b/apax.yml
@@ -29,6 +29,7 @@ devDependencies:
 dependencies:
   "@ax/system-strings": ^8.0.7
   "@ax/system-math": ^8.0.7
+  "@ax/simatic-1500-ip-configuration": ^4.0.2
 # Files, which will be shipped with the library
 files:
   - 'README.md'
